sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: not found: value lng
        swap(i, i+lng);
                  ^