sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var len = getValueCount();
  var gap = len;
  var fin = false;
  
  while(gap > 1 && !fin) {
    fin = true;
    if(gap > 1){
      gap = (gap.toDouble / 1.3).toInt;
    }
   
    var i = 0;
    while(i+gap < len){
      if(getValue(i+gap) < getValue(i)){
        swap(i, i+lng);
        fin = false;
      }
      i += 1;
    }
      
  }
}
